--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -163,6 +163,39 @@
   }
 }
 
+.help-queries {
+  margin: 0 -20px;
+
+  .nav-bar {
+    .MuiTab-label {
+      font-size: 13px;
+      font-weight: 400;
+      text-transform: capitalize;
+    }
+
+    .tabContainer {
+      display: flex;
+      font-size: 13px;
+      color: rgba(0, 0, 0, 0.54);
+
+      .tab {
+        width: 100%;
+        text-align: center;
+        padding: 13px 0;
+        cursor: pointer;
+      }
+    }
+
+    .hr {
+      border-top: 1px solid var(--primary);
+      width: 50%;
+      position: relative;
+      // left: 100%;
+      transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    }
+  }
+}
+
 @media only screen and (min-width: 300px) and (max-width: 500px) {
   .help-Category {
     .category {
