--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -73,6 +73,11 @@
   flex: 1;
   height: 36px;
 }
+
+.radio-btn-group .inside-text{
+  font-size: 13px;
+  font-weight: normal;
+}
 .MobileGrid {
   display: flex;
   align-items: baseline;
