payment screen fix

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1329,6 +1329,7 @@ input#pan {
   white-space: break-spaces;
   overflow: hidden;
   width: 95%;
+  margin-bottom: 3px;
 }
 .FlexItem1-withProvider-footer .text-block {
   width: 100%;
