--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -1,18 +1,53 @@
-// .help-container {
-//   height: 100%;
-
-//   .fadein-animation {
-//     height: 100%;
-//   }
-// }
-
 .help-Category {
   .title {
     font-size: 17px;
     font-weight: 700;
     line-height: 25px;
-    margin: 20px 0;
+    margin: 40px 0 20px;
     color: #0a1d32;
+  }
+
+  .no-result {
+    font-style: italic;
+    color: #878787;
+    font-weight: 600;
+    margin-top: 20px;
+  }
+
+  .fade-in {
+    animation: fadeIn ease 0.5s;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+  }
+
+  .search-inputs {
+    padding: 20px;
+    margin: 0 -20px;
+    border-bottom: 2px solid var(--highlight);
+    .faq {
+      font-size: 13px;
+      font-weight: 400;
+      color: #878787;
+    }
+
+    .tag {
+      font-size: 10px;
+      font-weight: 600;
+      color: #c4c4c4;
+      padding: 5px 6px;
+      background: var(--highlight);
+      border-radius: 4px;
+      width: max-content;
+      text-transform: uppercase;
+      margin-top: 10px;
+    }
   }
 
   .category {
@@ -232,6 +267,12 @@
       color: #979797;
     }
   }
+}
+
+.help-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media only screen and (min-width: 300px) and (max-width: 500px) {
