removed cta fix

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1584,10 +1584,9 @@ input#pan {
 .childblockiframe-element-one{
   width: 40%;
   margin-left: 4%;
-  height: max-content;
+  height: auto;
   text-align: left !important;
   position: relative;
-  margin-bottom: 60px;
 }
 
 .imgiframe{
@@ -1605,6 +1604,8 @@ input#pan {
   bottom: 0%;
   overflow: hidden;
   margin-top: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 @media (max-width: 900px) {
@@ -1635,7 +1636,7 @@ input#pan {
 }
 
 #iframeFooter{
-  position: fixed !important;
+  position: relative !important;
 }
 
 .Loaderiframe {
