--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -8,9 +8,8 @@
   }
 
   .no-result {
-    font-style: italic;
-    color: #878787;
-    font-weight: 600;
+    color: #979797;
+    font-weight: 500;
     margin-top: 20px;
   }
 
@@ -159,9 +158,19 @@
 
   .answer {
     font-size: 15px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 26px;
     color: #595959;
+    text-align: justify;
+
+    p {
+      color: red !important;
+      text-align: left !important;
+
+      span {
+        font-family: inherit !important;
+      }
+    }
   }
 
   .helpful-block {
@@ -235,7 +244,6 @@
       border-top: 1px solid var(--primary);
       width: 50%;
       position: relative;
-      // left: 100%;
       transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     }
   }
@@ -269,10 +277,70 @@
   }
 }
 
-.help-header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+.ticket-details {
+  .sub-title {
+    color: #595959;
+    font-size: 11px;
+    font-weight: 400;
+    margin: -10px 0 30px;
+  }
+
+  .ticket-reply {
+    width: 100%;
+  }
+
+  .chat-box {
+    background: #F7F6F6;
+    width: fit-content;
+    padding: 10px;
+    border-radius: 4px;
+
+    .chat {
+      font-size: 13px;
+      font-weight: 400;
+      color: #0A1D32;
+      margin-bottom: 10px;
+      line-height: 20px;
+    }
+
+    .date {
+      font-size: 11px;
+      font-weight: 400;
+      color: #979797;
+    }
+  }
+
+  .agent {
+    background-color: var(--highlight);
+  }
+
+  .agent-tag {
+    float: right;
+    .product-tag {
+      background: var(--highlight);
+      padding: 4px;
+      border-radius: 50%;
+      font-weight: 600;
+      color: var(--primary);
+      border: 1px solid var(--primary);
+      margin-left: 10px;
+      font-size: 11px;
+    }
+  }
+
+  .user-tag {
+    font-size: 13px;
+    font-weight: 500;
+    color: #0A1D32;
+    margin: 11px 0 30px;
+    width: max-content;
+    display: flex;
+    align-items: center;
+
+    img {
+      margin-right: 10px;
+    }
+  }
 }
 
 @media only screen and (min-width: 300px) and (max-width: 500px) {
