categories name resolved

--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -88,6 +88,11 @@
     padding: 6% 0;
     width: 100%;
   }
+
+  a {
+    text-decoration: none !important;
+    color: #0a1d32 !important;
+  }
 }
 
 .help-account {
