--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -1,4 +1,4 @@
-.help-Category {
+.help-CategoryList {
   .title {
     font-size: 17px;
     font-weight: 700;
@@ -88,30 +88,17 @@
     padding: 6% 0;
     width: 100%;
   }
-
-  a {
-    text-decoration: none !important;
-    color: #0a1d32 !important;
-  }
 }
 
-.help-account {
+.help-category {
   .category {
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 500;
     display: flex;
     justify-content: space-between;
     border-bottom: 2px solid var(--highlight);
     padding: 20px 0;
     cursor: pointer;
-  }
-
-  .category:hover {
-    background-color: var(--highlight);
-  }
-
-  .category:nth-child(4) {
-    border-bottom: 0px;
   }
 
   .sub-title {
