--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -947,6 +947,7 @@ body[data-device="mobile"] {
   }
 }
 
+// --------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 .react-dropdown-select-option-label{
   height: 18px;
@@ -986,8 +987,9 @@ body[data-device="mobile"] {
   font-size: 11px;
   font-weight: normal;
   line-height: 18px;
-  top: 5px;
+  top: -2px;
   left: 10px;
+  color: #767E86;
 }
 
  .label3{
@@ -1109,3 +1111,52 @@ body[data-device="mobile"] {
 //   border-radius: 10px;
 //   background-color: #ffffff;
 // }
+
+//-------------------------------------------------------------------------------------------------
+
+
+.css-2b097c-container{
+  border: none !important;
+  border-bottom: 1px solid #D6D6D6 !important;
+}
+
+
+.css-yk16xz-control{
+  background: rgba(238, 238, 238, 0.3) !important;
+  min-height: 51px !important;
+  border: none !important;
+}
+
+.css-1pahdxg-control{  // for the Box DrodownBox
+  background: rgba(238, 238, 238, 0.3) !important;
+  min-height: 51px !important;
+  border: none !important;
+  box-shadow: none !important;
+
+
+  border-bottom: 1px solid #4F2DA7 !important;
+}
+
+.css-yt9ioa-option{
+  display: flex;  
+  align-items: flex-start;
+
+  font-size: 13px !important;
+  font-weight: normal;
+  line-height: 21px !important;
+  color: #161A2E;
+}
+
+.css-9gakcf-option{
+ background-color: #EEEEEE !important;
+ color: black !important;
+
+ font-size: 13px !important;
+ font-weight: normal;
+ line-height: 21px !important;
+ color: #161A2E;
+}
+
+.css-1n7v3ny-option{
+  background-color: white !important;
+}
