resolved journey page kyc error

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -1129,6 +1129,7 @@
 }
 
 #kyc-upload-pan,
+#kyc-upload-address,
 #kyc-upload-ipv-video,
 #kyc-upload-sign,
 #kyc-upload-identification .page-body-kyc {
