Back Navigation payment Frequency Fix + corosal css Fix

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -987,3 +987,8 @@ body[data-device="mobile"] {
   color: white;
   background-color: var(--secondary);
 }
+
+.carousel.carousel-slider{
+  display: flex;
+  flex-direction: column-reverse;
+}
