--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -1175,6 +1175,7 @@
       color: var(--secondary);
       font-size: 10px;
       margin: 5px 0 0;
+      cursor: pointer;
     }
   }
 }
@@ -1484,7 +1485,7 @@
 
     .value {
       line-height: 15px;
-      color: #160D2E;
+      color: #160d2e;
     }
   }
 
@@ -1934,3 +1935,68 @@
   margin-top: 25px;
 }
 
+.ipv-know-more-dialog {
+  .MuiDialog-paper {
+    margin: 0 !important;
+  }
+  
+  .know-more-dialog-content {
+    color: #333333;
+    line-height: 1.5;
+    padding: 15px 15px 10px 15px;
+
+    header {
+      width: 40px;
+      padding-bottom: 40px;
+      cursor: pointer;
+
+      .close-icon {
+        width: 15px;
+        height: 15px;
+      }
+    }
+
+    main {
+      padding-bottom: 30px;
+
+      .title {
+        font-size: 20px;
+        color: #160d2e;
+        font-weight: 600;
+      }
+
+      .content {
+        text-align: center;
+
+        .text {
+          font-size: 14px;
+          color: #160d2e;
+          text-align: left;
+          padding: 15px 0 5px 0;
+          
+          b {
+            font-weight: 600;
+          }
+        }
+      }
+    }
+  }
+
+  .action {
+    width: 100% !important;
+    margin: 8px 0 !important;
+
+    button {
+      color: white;
+      background-color: var(--secondary);
+      width: 100%;
+      text-align: center;
+      margin: 0 15px;
+    }
+  
+    button:hover {
+      color: white;
+      background-color: var(--secondary);
+    }
+  }
+}
