Label added for drop-down

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1160,3 +1160,9 @@ body[data-device="mobile"] {
 .css-1n7v3ny-option{
   background-color: white !important;
 }
+
+.css-1uccc91-singleValue{
+  margin-top: 3px;
+  font-size: 13px;
+  line-height: 21px;
+}
