MultiSelect added for drop-down

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1175,3 +1175,19 @@ body[data-device="mobile"] {
   font-size: 13px;
   line-height: 21px;
 }
+
+.css-g1d714-ValueContainer{
+  font-size: 13px;
+  margin-bottom: -10px;
+  line-height: 21px;
+  font-weight: normal;
+  color: #161A2E;
+  max-width: 80%;
+  height: 33px !important;
+  overflow-x: auto !important;
+  overflow-y: hidden;
+  display: inline-flex !important;
+  flex-direction: column;
+  align-content: flex-start
+
+}
