--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1141,7 +1141,9 @@ body[data-device="mobile"] {
 .css-9gakcf-option{
  background-color: #EEEEEE !important;
  color: black !important;
-
+ display: flex !important;
+ align-items: flex-start;
+ min-height: 41px !important;
  font-size: 13px !important;
  font-weight: normal;
  line-height: 21px !important;
@@ -1149,7 +1151,7 @@ body[data-device="mobile"] {
 }
 
 .css-1n7v3ny-option{
-  display: flex;  
+  display: flex !important;  
   align-items: flex-start;
   background-color: white !important;
   font-size: 13px !important;
@@ -1159,21 +1161,30 @@ body[data-device="mobile"] {
 }
 
 .css-yt9ioa-option{
-  display: flex;  
   align-items: flex-start;
   font-size: 13px !important;
   // font-weight: normal;
   line-height: 21px !important;
   color: #161A2E !important;
   min-height: 41px !important;
+  display: flex !important;
+  align-items: flex-start;
 }
-
 
 
 .css-1uccc91-singleValue{
   margin-top: 3px;
   font-size: 13px;
   line-height: 21px;
+  // margin-left: -80px !important;
+  display: inline-block !important;
+  flex-direction: row !important;
+  position: absolute;
+  left: 10px;
+}
+
+ .css-g1d714-ValueContainer .css-1uccc91-singleValue{
+  flex-direction: row !important;
 }
 
 .css-g1d714-ValueContainer{
@@ -1188,6 +1199,8 @@ body[data-device="mobile"] {
   overflow-y: hidden;
   display: inline-flex !important;
   flex-direction: column;
-  align-content: flex-start
+  align-content: flex-start;
+  position: relative;
+
 
 }
