--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1205,3 +1205,12 @@ body[data-device="mobile"] {
   flex-wrap: wrap;
   align-items: center;
 }
+
+.css-26l3qy-menu{
+  min-height: 300px !important;
+}
+
+.drop-up .Select-menu-outer {
+  top: auto;
+  bottom: 100%;
+}
