--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -209,7 +209,7 @@ body[data-device="web"] {
 
 .Container {
   padding: 20px 20px;
-  overflow: visible !important;  // The Dropdown was covered Under The parent Container, So made it Overflow the ParentContainer
+  // overflow: visible !important;
   /* margin-bottom: 60px;
   padding-bottom: 20px !important;  */
   background-color: #fff;
