--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1189,7 +1189,6 @@ body[data-device="mobile"] {
 
 .css-g1d714-ValueContainer{
   font-size: 13px;
-  margin-bottom: 0px;
   line-height: 21px;
   font-weight: normal;
   color: #161A2E;
@@ -1204,6 +1203,11 @@ body[data-device="mobile"] {
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
+}
+
+
+.css-1rhbuit-multiValue{
+  margin-top: 12px !important;
 }
 
 .css-26l3qy-menu{
