--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1631,7 +1631,7 @@ input#pan {
     font-weight: 500;
   }
   .content {
-    margin: 20px 0 0 20px;
+    margin: 20px 20px 0 20px;
     padding-left: 0;
   }
 
