--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1294,7 +1294,7 @@ input#pan {
   .common-faqs-tile {
     border-bottom: 1px solid #d7d4d4;
     cursor: pointer;
-    padding: 5px 0 5px 0;
+    padding: 5px 18px 5px 0;
   }
 
   .common-faqs-tile:last-child{
@@ -1307,6 +1307,9 @@ input#pan {
     margin: 10px 0 10px 0;
     color: WorkSans-Regular_Medium;
     font-weight: 500;
+    .top-icon{
+      margin-left: 25px;
+    }
   }
   .subtitle {
     color: #767e86;
