added return after redirection and other changes

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -322,6 +322,10 @@
   font-weight: bold;
 }
 
+.kyc-journey-subtitle {
+  margin-bottom: 20px; 
+}
+
 .kyc-journey .alert-status-info {
   margin-top: 20px;
 }
