--- a/react_webviews/src/gold/components/Style.scss
+++ b/react_webviews/src/gold/components/Style.scss
@@ -566,7 +566,9 @@ img.gold-offer-slide-img {
 
 .gold-dialog {
   .hr {
-    border: 1px solid #ededed;
+    width: 100%;
+    height: 1px;
+    background-color: #ededed;
   }
   
   .content-points {
